/*
 * $Id: ChangeLog,v 1.1161 2003/06/21 07:36:03 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-06-21 17:01 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * source/vm/hbi18n.c
    ! Fixed castings
    ! Fixed include specific to windows (not compiling on linux)

2003-06-21 00:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/classes.h
  * source/vm/classes.c
  * source/vm/hvm.c
    + Added support #ifndef HB_NO_PROFILER guard for Profiler code.
      /* HB_NO_PROFILER should be defined if you want to EXCLUDE Profiler,
         eitherway required functions will be present (just empty). */

2003-06-21 09:15 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * source/vm/hbi18n.c
    ! Fixed compilation under windows

2003-06-21 08:58 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * include/hberrors.h
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
  * source/compiler/hbgenerr.c
    % Emproved support for -j switch, both in reporting and checking.
    ! -jfilename is now working (HILoutput is sent to filename)
    % Using now HIT format to produce HIL files, so it is posible to
      have the same API to manage both.
    ! If an HIL file already exists, the data is appended. This causes
      proliferation of the list on multiple make, unless the file is
      intentionally removed.

  * include/hbi18n.h
  * source/vm/hbi18n.c
    % Api rationalization.

  * source/vm/hvm.c
    ! Added support for initialization of i18n at startup and shutdown

  + tests/i18n/fr_FR.hit
  + tests/i18n/it_IT.hit
    ! Test of international dictionaries for i18ntest. Set environment
      variable LANG="it_IT" or LANG="fr_FR" and see the international
      result! (french dictionary is intentionally left "partial", to
      demonstrate the possibility to do also mixed/partial dicts).
